fixed button on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* Reset CSS */
+
 * {
     padding: 0;
     margin: 0;
@@ -10,11 +11,13 @@ html {
     scroll-behavior: smooth;
 }
 
+
 /* 
     1. Từ ngoài vào trong
     2. Từ trên xuống dưới
     3. Tổng quan đến chi tiết
 */
+
 
 /* 
     1. Vị trí
@@ -22,6 +25,7 @@ html {
     3. Màu sắc
     4. Kiếu dáng (kiểu chữ, hình tròn, vuông,...)
 */
+
 
 /* Common */
 
@@ -50,9 +54,10 @@ html {
     margin-top: 15px;
     border: none;
     text-align: center;
+    -webkit-appearance: none;
 }
 
-.btn:hover{
+.btn:hover {
     color: #000;
     background-color: #ccc;
     cursor: pointer;
@@ -97,12 +102,13 @@ html {
     margin-top: 32px !important;
 }
 
+
 /* Main */
+
 
 /* #main {
 
 } */
-
 
 #header {
     height: 46px;
@@ -118,11 +124,12 @@ html {
     display: inline-block;
 }
 
-#nav, .subnav{
+#nav,
+.subnav {
     list-style: none;
 }
 
-#nav > li{
+#nav>li {
     display: inline-block;
 }
 
@@ -131,7 +138,7 @@ html {
     position: relative;
 }
 
-#nav > li > a {
+#nav>li>a {
     color: #fff;
     text-transform: uppercase;
 }
@@ -147,7 +154,7 @@ html {
 }
 
 #nav .subnav li:hover a,
-#nav > li:hover > a {
+#nav>li:hover>a {
     color: #000;
     background-color: #ccc;
 }
@@ -251,14 +258,13 @@ html {
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 4px;
-
 }
 
 #content .section-sub-heading {
     margin-top: 25px;
     text-align: center;
     font-size: 15px;
-    opacity: .6 ;
+    opacity: .6;
     font-style: italic;
 }
 
@@ -283,17 +289,18 @@ html {
     border-radius: 4px;
 }
 
+
 /* Tour */
 
 #content .tour-section {
     background-color: #000;
-     
 }
 
 #content .ticket-list {
     margin-top: 30px;
     background-color: #fff;
 }
+
 .ticket-list .ticket-section {
     font-size: 15px;
     padding: 11px 16px;
@@ -321,6 +328,7 @@ html {
     line-height: 24px;
     margin-top: -4px;
 }
+
 
 /* Places */
 
@@ -360,6 +368,7 @@ html {
 
 
 /* Contact form */
+
 .contact-content {
     margin-top: 48px;
 }
@@ -387,11 +396,16 @@ html {
     font-size: 15px;
 }
 
+.contact-submit-btn {
+    font-size: 17px;
+}
+
 .contact-form .form-control {
     padding: 10px;
     width: 100%;
-    border: 1px solid #ccc; 
+    border: 1px solid #ccc;
     outline: none;
+    font-size: 16px;
 }
 
 .map-section img {
@@ -401,7 +415,6 @@ html {
 
 
 /* Footer section */
-
 
 #footer {
     text-align: center;
@@ -420,7 +433,7 @@ html {
 }
 
 #footer a:hover {
-    color: rgba(0, 0, 0, 0.4    );
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .modal {
